// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing on unconnected Search Testing search function should set error state and display error if fetchPost returned with error 1`] = `
<Layout
  item="search"
>
  <div
    className="searchBar"
  >
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      allowAdditions={true}
      closeOnBlur={true}
      deburr={false}
      fluid={true}
      icon="search"
      minCharacters={1}
      multiple={true}
      noResultsMessage="No results found."
      onAddItem={[Function]}
      onChange={[Function]}
      openOnFocus={true}
      options={
        Array [
          Object {
            "key": "life",
            "text": "life",
            "value": "life",
          },
          Object {
            "key": "photography",
            "text": "photography",
            "value": "photography",
          },
          Object {
            "key": "kr",
            "text": "kr",
            "value": "kr",
          },
          Object {
            "key": "steemit",
            "text": "steemit",
            "value": "steemit",
          },
          Object {
            "key": "art",
            "text": "art",
            "value": "art",
          },
          Object {
            "key": "yatch",
            "text": "yatch",
            "value": "yatch",
          },
          Object {
            "key": "crypto",
            "text": "crypto",
            "value": "crypto",
          },
          Object {
            "key": "cake",
            "text": "cake",
            "value": "cake",
          },
          Object {
            "key": "chalk",
            "text": "chalk",
            "value": "chalk",
          },
          Object {
            "key": "zebra",
            "text": "zebra",
            "value": "zebra",
          },
        ]
      }
      placeholder="Insert your tags here..."
      renderLabel={[Function]}
      search={true}
      searchInput="text"
      selectOnBlur={true}
      selectOnNavigation={true}
      selection={true}
      value={
        Array [
          "kr",
          "art",
        ]
      }
      wrapSelection={true}
    />
    <Button
      as="button"
      loading={false}
      onClick={[Function]}
      positive={true}
      role="button"
    >
       
      Search
    </Button>
  </div>
  <div
    className="searchOptionsBar"
  >
    <div>
      Filter tags by
       
       
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        closeOnBlur={true}
        deburr={false}
        icon="dropdown"
        inline={true}
        minCharacters={1}
        noResultsMessage="No results found."
        onChange={[Function]}
        openOnFocus={true}
        options={
          Array [
            Object {
              "text": "New",
              "value": "created",
            },
            Object {
              "text": "Trending",
              "value": "trending",
            },
            Object {
              "text": "Hot",
              "value": "hot",
            },
            Object {
              "text": "Active",
              "value": "active",
            },
            Object {
              "text": "Promoted",
              "value": "promoted",
            },
          ]
        }
        renderLabel={[Function]}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        value="created"
        wrapSelection={true}
      />
    </div>
    <div
      className="markyTag"
    >
      <Checkbox
        checked={false}
        label="Mark first tag as category"
        onChange={[Function]}
        type="checkbox"
      />
      <Popup
        content="Return search results which match the given first tag as their categories."
        keepInViewPort={true}
        on="hover"
        position="top left"
        trigger={
          <Icon
            as="i"
            name="question circle outline"
          />
        }
      />
    </div>
  </div>
  <div
    className="postList"
  >
    <Connect(PostList) />
    <div
      className="error"
    >
      <p>
        Error: some kinda error
      </p>
      <p>
        Sorry, something is broken. Take a screenshot and notify
        <a
          href="https://steemit.com/@alvinvoo"
          rel="noopener noreferrer"
          target="_blank"
        >
           
          @alvinvoo
        </a>
      </p>
    </div>
  </div>
  <ScrollButton
    delayInMs={16.66}
    scrollStepInPx={50}
  />
</Layout>
`;

exports[`Testing on unconnected Search should render Search page correctly 1`] = `
<Layout
  item="search"
>
  <div
    className="searchBar"
  >
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      allowAdditions={true}
      closeOnBlur={true}
      deburr={false}
      fluid={true}
      icon="search"
      minCharacters={1}
      multiple={true}
      noResultsMessage="No results found."
      onAddItem={[Function]}
      onChange={[Function]}
      openOnFocus={true}
      options={
        Array [
          Object {
            "key": "life",
            "text": "life",
            "value": "life",
          },
          Object {
            "key": "photography",
            "text": "photography",
            "value": "photography",
          },
          Object {
            "key": "kr",
            "text": "kr",
            "value": "kr",
          },
          Object {
            "key": "steemit",
            "text": "steemit",
            "value": "steemit",
          },
          Object {
            "key": "art",
            "text": "art",
            "value": "art",
          },
          Object {
            "key": "yatch",
            "text": "yatch",
            "value": "yatch",
          },
          Object {
            "key": "crypto",
            "text": "crypto",
            "value": "crypto",
          },
          Object {
            "key": "cake",
            "text": "cake",
            "value": "cake",
          },
          Object {
            "key": "chalk",
            "text": "chalk",
            "value": "chalk",
          },
          Object {
            "key": "zebra",
            "text": "zebra",
            "value": "zebra",
          },
        ]
      }
      placeholder="Insert your tags here..."
      renderLabel={[Function]}
      search={true}
      searchInput="text"
      selectOnBlur={true}
      selectOnNavigation={true}
      selection={true}
      value={Array []}
      wrapSelection={true}
    />
    <Button
      as="button"
      loading={false}
      onClick={[Function]}
      positive={true}
      role="button"
    >
       
      Search
    </Button>
  </div>
  <div
    className="searchOptionsBar"
  >
    <div>
      Filter tags by
       
       
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        closeOnBlur={true}
        deburr={false}
        icon="dropdown"
        inline={true}
        minCharacters={1}
        noResultsMessage="No results found."
        onChange={[Function]}
        openOnFocus={true}
        options={
          Array [
            Object {
              "text": "New",
              "value": "created",
            },
            Object {
              "text": "Trending",
              "value": "trending",
            },
            Object {
              "text": "Hot",
              "value": "hot",
            },
            Object {
              "text": "Active",
              "value": "active",
            },
            Object {
              "text": "Promoted",
              "value": "promoted",
            },
          ]
        }
        renderLabel={[Function]}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        value="created"
        wrapSelection={true}
      />
    </div>
    <div
      className="markyTag"
    >
      <Checkbox
        checked={false}
        label="Mark first tag as category"
        onChange={[Function]}
        type="checkbox"
      />
      <Popup
        content="Return search results which match the given first tag as their categories."
        keepInViewPort={true}
        on="hover"
        position="top left"
        trigger={
          <Icon
            as="i"
            name="question circle outline"
          />
        }
      />
    </div>
  </div>
  <div
    className="postList"
  >
    <Connect(PostList) />
  </div>
  <ScrollButton
    delayInMs={16.66}
    scrollStepInPx={50}
  />
</Layout>
`;
